discord-frontend/hartex-discord-commands-test/tests/ui/expected_punctuation.stderr
error: expected punctuation; found `expected_punctuation` instead
  --> tests/ui/expected_punctuation.rs:26:17
   |
26 | #[metadata(name expected_punctuation)]
   |                 ^^^^^^^^^^^^^^^^^^^^
